[workspace]
members = ["day01", "util"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
util = { version = "0.1.0", path = "util" }

[workspace.lints.clippy]
# Comprehensive lints for larger projects
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "allow", priority = -1 }

# Security-focused lints
unwrap_used = "deny"
expect_used = "deny"

# Allow some pedantic lints that are too strict for larger projects
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
